--- a/NoteBooks/Scrapping_data.ipynb
+++ b/NoteBooks/Scrapping_data.ipynb
@@ -2,10 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ca5bb994-c41a-4360-af84-23fe45f2db36",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'snscrape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msnscrape\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmodules\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mtwitter\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msntwitter\u001b[39;00m\n\u001b[32m      3\u001b[39m query = \u001b[33m\"\u001b[39m\u001b[33mdepression OR anxiety OR burnout since:2024-01-01 until:2025-01-01\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      4\u001b[39m tweets = []\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'snscrape'"
+     ]
+    }
+   ],
    "source": [
     "import snscrape.modules.twitter as sntwitter\n",
     "\n",
@@ -16,6 +28,14 @@
     "        break\n",
     "    tweets.append([tweet.date, tweet.content, tweet.user.username])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36438585-a858-4ae6-adf4-f7a54016ca02",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
